# apngasm

./: .gitignore  BACKERS.txt  CMakeLists.txt  Dockerfile  Makefile.am  README.md
.github/workflows/: build.yml  test.yml
cli/: CMakeLists.txt  DESCRIPTION.txt
cli/debian/: control  rules
cli/package/: CMakeLists.txt.in
cli/src/: apngasm-cli-version.h.in  apngasm-cli.cpp  cli.cpp  cli.h  options.cpp  options.h
debian/: apngasm.manpages  changelog  control  copyright  libapngasm.install  rules
docs/: doxygen-config
docs/building/win/: instructions.md
docs/html/: annotated.html  apngasm-conf_8h_source.html  apngasm_8h_source.html  apngframe_8h_source.html  classapngasm_1_1APNGAsm-members.html  classapngasm_1_1APNGAsm.html  classapngasm_1_1APNGFrame-members.html  classapngasm_1_1APNGFrame.html  classes.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_a065c5f60305fee3569f887679366939.html  functions.html  functions_func.html  index.html  namespaceapngasm.html  namespacemembers.html  namespacemembers_vars.html  namespaces.html  structapngasm_1_1rgb-members.html  structapngasm_1_1rgb.html  structapngasm_1_1rgba-members.html  structapngasm_1_1rgba.html
docs/html/search/: all_0.js  all_1.js  all_4.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  namespaces_0.js  search.js  variables_0.js
docs/latex/: annotated.tex  classapngasm_1_1APNGAsm.tex  classapngasm_1_1APNGFrame.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  dir_a065c5f60305fee3569f887679366939.tex  namespaceapngasm.tex  namespaces.tex  refman.tex  structapngasm_1_1CHUNK.tex  structapngasm_1_1OP.tex  structapngasm_1_1rgb.tex  structapngasm_1_1rgba.tex
docs/man/: apngasm  apngasm.1
legacy/: .apngasm.c.swp  Makefile  apngasm  apngasm.c  readme.txt
lib/: .gitignore  CMakeLists.txt  DESCRIPTION.txt  LICENSE.txt  libapngasm.pc.in  manifest.txt.in
lib/debian/: changelog  control
lib/interfaces/android/: CMakeLists.txt  androidbuild.rb  prepare.rb
lib/interfaces/android/jni/: Android.mk  Application.mk
lib/interfaces/android/src/: NativeLibLoader.java.in
lib/interfaces/java/: CMakeLists.txt  NativeLibLoader.java.in
lib/interfaces/ruby/: CMakeLists.txt
lib/package/: CMakeLists.txt.in
lib/src/: apng.i  apngasm-conf.h  apngasm-version.h.in  apngasm.cpp  apngasm.h  apngasm.i  apngframe.cpp  apngframe.h  apngframe.i  rapngasm.i
lib/src/listener/: apngasmlistener.cpp  apngasmlistener.h
lib/src/spec/: specreader.cpp  specreader.h  specwriter.cpp  specwriter.h
lib/src/spec/priv/: specreaderimpl.cpp  specreaderimpl.h  specwriterimpl.cpp  specwriterimpl.h
projects/vs2010/: apngasm-cli.vcxproj  apngasm-cli.vcxproj.filters  apngasm.sln  apngasm.vcxproj  apngasm.vcxproj.filters  apngtest.vcxproj  apngtest.vcxproj.filters
resources/images/: test.json  test.xml
spec/: delay_test.sh  disassemble_test.sh  json_test.sh  test.sh  xml_test.sh
src/: apngasm-cli.cpp  apngasm.cpp  apngasm.h  apngframe.cpp  apngframe.h  apnghelper.cpp  apnghelper.h  apngtest.cpp  cli.cpp  cli.h  libapngasm.cpp  libapngasm.h  options.cpp  options.h
src/cli/: cli.cpp  cli.h  options.cpp  options.h
src/listener/: apngasmlistener.cpp  apngasmlistener.h  savelistener.cpp  savelistener.h
src/spec/: specparser.cpp  specparser.h  specreader.cpp  specreader.h  specreaderimpl.cpp  specreaderimpl.h  specwriter.cpp  specwriter.h
src/spec/priv/: specreader.cpp  specreader.h  specreaderimpl.cpp  specreaderimpl.h  specwriter.cpp  specwriter.h  specwriterimpl.cpp  specwriterimpl.h
src/specreader/: specreader.h  specreaderimpl.cpp  specreaderimpl.h
test/: CMakeLists.txt  all_test_run.sh  apngtest.cpp  disassemble_test.sh
test/cli/: delay-test.sh  delay_test.sh  disassemble-test.sh  disassemble_test.sh  json-test.sh  json_test.sh  logo-test.sh  xml-test.sh  xml_test.sh
test/cpp/: apngasm-test.cpp
windows/: compile.bat  compile_deps.bat
